--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
+
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
 </body>
 
 </html>
