home page mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Mlassakoski</title>
+  <title>Mauricio lassakoski | Mlassakoski</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-    .logo {
+    /* .logo {
       font-weight: bold;
       font-family: sans-serif;
       opacity: .4;
@@ -25,17 +25,17 @@
       justify-content: center;
       height: 100%;
       overflow-y: hidden;
-    }
+    } */
 
   </style>
 </head>
 
 <body>
   <mlassakoski-root>
-    <div class="loader-panel">
+    <!-- <div class="loader-panel">
       <img src="assets/pacman.svg" alt="">
       <div class="logo">Loading...</div>
-    </div>
+    </div> -->
   </mlassakoski-root>
 </body>
 
