--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
-    /* .logo {
+    .logo {
       font-weight: bold;
       font-family: sans-serif;
       opacity: .4;
-      color: black;
-      font-size: 1.4em;
     }
 
     .loader-panel {
@@ -23,19 +21,63 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100%;
+      height: -webkit-fill-available;
       overflow-y: hidden;
-    } */
+    }
+
+    .spinner {
+      height: 200px;
+      width: 200px;
+      animation: rotate 2s linear infinite;
+      transform-origin: center center;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+    }
+
+    .path {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+      animation: dash 1.5s ease-in-out infinite;
+      stroke-linecap: round;
+      stroke: #383838;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
 
   </style>
 </head>
 
 <body>
   <mlassakoski-root>
-    <!-- <div class="loader-panel">
-      <img src="assets/pacman.svg" alt="">
-      <div class="logo">Loading...</div>
-    </div> -->
+    <div class="loader-panel">
+      <div class="logo">MLASSAKOSKI</div>
+      <svg class="spinner" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+      </svg>
+    </div>
   </mlassakoski-root>
 </body>
 
