fixed mobile menu btn

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,17 @@
   <meta charset="utf-8">
   <title>Mauricio lassakoski | Mlassakoski</title>
   <base href="/">
-
+  <meta name="description" content="Mauricio Lassakoski Porfifolio">
+  <meta name="keywords" content="HTML,SASS,Angular 5,JavaScript">
+  <meta name="author" content="Mauricio Lassakoski">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     .logo {
       font-weight: bold;
       font-family: sans-serif;
-      opacity: .4;
+      opacity: 0.4;
     }
 
     .loader-panel {
